# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.1.0/).

## [main] 2024-11-16

### Added
- Makefile content
- Changelog's template and changelog itself
- Notices in `./main.c`

### Changed
- Executable files and test.c in gitignore

---

## [main] 2024-11-17

### Added
- .dbg files in gitignore

### Changed
- Makefile linker fixed

---
## [toby] 2024-11-17

### Added
- Transpose method

### Changed
- Implemented vector_init
- Implemented transpose