@@ -6,9 +6,10 @@ typedef struct vector{
     double **p;
 } vector;
 
-vector *vector_init(int x, int y);
-vector *transpose(const vector *v);
-double dot(const vector *a, const vector *b);
-void multiply(const vector *a, vector *b);
+vector* vector_init(int x, int y);
+vector* transpose(const vector* v);
+double dot(const vector* a, const vector* b);
+vector* multiply(const vector* a,const vector* b);
+void pvector(const vector* v);
 
 #endif
